Refactor theme fetcher partially